tests/src/frontend/typechecking/exhaustiveness/invalid/multiple_child_class_override_named_params_recursive_dead_pattern.sk
base class A{x: Int}
base class B{y: Bool} extends A
class C{z: A} extends B

fun myMatch(x: A): String {
  x match {
  | A{x => 1} -> "P"
  | B{y => false} -> "a"
  | C{z => A{x => 1}, y => true, x => 2} -> "s"
  | C{z => B{y => true, x => 1}, y => true, x => 2} -> "s"
  | B{y => true, x => 2} -> "s"
  | A{x => _} -> "\n"
  }
}
